Fail on CQ when annotation names don't match between code and XML

- When annotations.xml is modified in a CL, run a full test of traffic
  annotations to catch more errors.

- When there are duplicate hash codes (e.g. after renaming in
  annotations.xml), fail even if error-resilient mode is on.

These 2 things combined means the buildbot will fail on CQ instead of
only failing on the waterfall.

Bug: 876855
Change-Id: Ib4ada288f4aa29943d1413bd81c4ec7c22735fc6
Reviewed-on: https://chromium-review.googlesource.com/c/1291813
Commit-Queue: Nicolas Ouellet-Payeur <nicolaso@chromium.org>
Reviewed-by: Ramin Halavati <rhalavati@chromium.org>
Cr-Commit-Position: refs/heads/master@{#601926}
Former-commit-id: 46548710be35a0f1dc4ddffff8114a58ecb25c64