tools/traffic_annotation/auditor/traffic_annotation_auditor.cc
@@ -761,31 +761,16 @@ void TrafficAnnotationAuditor::AddMissingAnnotations(
   }
 }
 
-void TrafficAnnotationAuditor::CheckArchivedAnnotationsHaveValidOsList() {
-  const auto& supported_platforms = exporter_.GetAllSupportedPlatforms();
-  for (const auto& pair : exporter_.GetArchivedAnnotations()) {
-    for (const auto& os : pair.second.os_list) {
-      if (!base::ContainsValue(supported_platforms, os)) {
-        AuditorResult error(
-            AuditorResult::Type::ERROR_INVALID_OS, std::string(),
-            TrafficAnnotationExporter::kAnnotationsXmlPath.MaybeAsASCII(),
-            AuditorResult::kNoCodeLineSpecified);
-        error.AddDetail(os);
-        error.AddDetail(pair.first);
-        errors_.push_back(std::move(error));
-      }
-    }
-  }
-}
-
 bool TrafficAnnotationAuditor::RunAllChecks(
     const std::vector<std::string>& path_filters,
     bool report_xml_updates) {
-  std::set<int> deprecated_ids;
-
-  if (!exporter_.GetDeprecatedHashCodes(&deprecated_ids)) {
+  if (exporter_.GetArchivedAnnotations().empty() &&
+      !exporter_.LoadAnnotationsXML()) {
     return false;
   }
+
+  std::set<int> deprecated_ids;
+  exporter_.GetDeprecatedHashCodes(&deprecated_ids);
 
   if (path_filters.size())
     AddMissingAnnotations(path_filters);
@@ -800,15 +785,11 @@ bool TrafficAnnotationAuditor::RunAllChecks(
   if (errors_.empty())
     CheckAnnotationsContents();
 
-  CheckArchivedAnnotationsHaveValidOsList();
-
   CheckAllRequiredFunctionsAreAnnotated();
 
   if (errors_.empty()) {
-    if (!exporter_.UpdateAnnotations(extracted_annotations_,
-                                     GetReservedIDsMap())) {
-      return false;
-    }
+    exporter_.UpdateAnnotations(extracted_annotations_, GetReservedIDsMap(),
+                                &errors_);
   }
 
   // If |report_xml_updates| is true, check annotations.xml whether or not it is
