tools/traffic_annotation/auditor/traffic_annotation_exporter.h
@@ -34,8 +34,6 @@ class TrafficAnnotationExporter {
     std::string file_path;
   };
 
-  static const base::FilePath kAnnotationsXmlPath;
-
   TrafficAnnotationExporter(const base::FilePath& source_path);
   ~TrafficAnnotationExporter();
   TrafficAnnotationExporter(const TrafficAnnotationExporter&) = delete;
@@ -44,10 +42,12 @@ class TrafficAnnotationExporter {
   // Loads annotations from annotations.xml file into |archive_|.
   bool LoadAnnotationsXML();
 
-  // Updates |archive_| with current set of extracted annotations and
-  // reserved ids. Sets the |modified_| flag if any item is updated.
-  bool UpdateAnnotations(const std::vector<AnnotationInstance>& annotations,
-                         const std::map<int, std::string>& reserved_ids);
+  // Updates |archive_| with current set of extracted annotations and reserved
+  // ids. Sets the |modified_| flag if any item is updated. Appends errors to
+  // |errors|.
+  void UpdateAnnotations(const std::vector<AnnotationInstance>& annotations,
+                         const std::map<int, std::string>& reserved_ids,
+                         std::vector<AuditorResult>* errors);
 
   // Saves |archive_| into annotations.xml.
   bool SaveAnnotationsXML() const;
@@ -55,22 +55,18 @@ class TrafficAnnotationExporter {
   // Returns the required updates for annotations.xml.
   std::string GetRequiredUpdates();
 
-  // Produces the list of deprecated hash codes. Returns false if
-  // annotations.xml is not loaded and cannot be loaded.
-  bool GetDeprecatedHashCodes(std::set<int>* hash_codes);
+  // Produces the list of deprecated hash codes. Requires annotations.xml to be
+  // loaded.
+  void GetDeprecatedHashCodes(std::set<int>* hash_codes);
 
   bool modified() const { return modified_; }
 
   // Runs tests on content of |archive_|.
-  bool CheckArchivedAnnotations();
+  void CheckArchivedAnnotations(std::vector<AuditorResult>* errors);
 
   const std::map<std::string, ArchivedAnnotation>& GetArchivedAnnotations()
       const {
     return archive_;
-  }
-
-  const std::vector<std::string>& GetAllSupportedPlatforms() const {
-    return all_supported_platforms_;
   }
 
   // Checks if the current platform is in the os list of archived annotation.
